--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: BOSH Terminology
+title: Terminology
 ---
 
 | Term | Definition |
@@ -13,15 +13,14 @@ title: BOSH Terminology
 | <a id="deployment"></a>Deployment | An encapsulation of software and configuration that BOSH can deploy to the cloud. You can think of a BOSH deployment as the state of a collection of VMs: what software is on them, what resources they use, and how these are orchestrated. Even though BOSH creates the deployment using ephemeral resources, the deployment is stable in that BOSH re-creates VMs that fail and otherwise works to keep your software running. BOSH also manages persistent disks so that state (for example, database data files) can survive when BOSH re-creates a VM. A particular combination of manifest, stemcell, and release is portable across different kinds of cloud infrastructure (that is, across different CPIs) with minimal changes to the manifest. |
 | <a id="director"></a>Director | The BOSH component that coordinates the BOSH Agents and responds to user requests and system events. The BOSH Director is the orchestrator of a BOSH deployment. |
 | <a id="disk_pools"></a>Disk Pools | Disk pools are logical collections of disks, in a deployment, each created with the same configuration. |
-| <a id="errand"></a>Errand | A BOSH Errand is a short-lived BOSH job that an operator can run multiple times after the deploy finishes. Common use cases: <ul><li>Smoke tests</li><li>Cloud Foundry Service Broker binding and unbinding</li><li>Pushing an app to Cloud Foundry</li></ul>|
-| <a id="iaas"></a>IaaS | Infrastructure as a Service. "An IaaS" is shorthand for "a cloud from a particular IaaS provider." BOSH enables the Cloud Foundry PaaS to support multiple IaaS providers. |
+| <a id="errand"></a>Errand | A BOSH Errand is a short-lived BOSH job that an operator can run multiple times after the deploy finishes. Common use cases: <ul><li>Smoke tests</li><li>Comprehensive test suites</li><li>Cloud Foundry Service Broker binding and unbinding</li></ul>|
+| <a id="iaas"></a>IaaS | Infrastructure as a Service. "An IaaS" is shorthand for "a cloud from a particular IaaS provider." BOSH enables the Cloud Foundry PaaS and other software deployed with BOSH to support multiple IaaS providers. |
 | <a id="job"></a>Job | A job is a composition of configuration and installed software on a VM. Each job specified names the VM types and job templates used to create the VMs. A job template is part of a release and populates VMs with packages, configuration files, and control scripts that tell the BOSH Agent what runs on the VM. |
-| <a id="jumpbox"></a>Jumpbox | A VM that acts as a single access point for the VMs in a BOSH deployment. For resilience, there should be more than one jumpbox. Allowing access through jumpboxes and disabling access to the other VMs is a common security measure. Note: An Inception Server can be used as a jumpbox. |
-| <a id="manifest"></a>Manifest | A YAML file that identifies one or more release, one or more stemcells and specifies how to configure them for a given deployment. |
-| <a id="meltdown"></a>Meltdown | A state in which the number of unresponsive VM alerts to the BOSH [Resurrector](./bosh-resurrector.html) within a specified time period exceeds a specified threshold. |
-| <a id="microbosh"></a>MicroBOSH | An essentially complete BOSH that runs within a single VM. One use of the MicroBOSH is to orchestrate the deployment of a BOSH on multiple VMs. |
+| <a id="jumpbox"></a>Jump box | A VM that acts as a single access point for the VMs in a BOSH deployment. For resilience, there should be more than one jump box. Allowing access through jump boxes and disabling access to the other VMs is a common security measure. |
+| <a id="manifest"></a>Deployment manifest (or just manifest) | A YAML file that identifies one or more release, one or more stemcells and specifies how to configure them for a given deployment. |
+| <a id="microbosh"></a>MicroBOSH | A complete BOSH that runs on a single VM. One use of the MicroBOSH is to orchestrate the deployment of a BOSH on multiple VMs. |
 | <a id="paas"></a>PaaS | Platform as a Service, where large-scale distributed software is deployed to the platform. The PaaS abstracts away details of the underlying IaaS. Cloud Foundry is a PaaS. |
-| <a id="release"></a>Release | A collection of configuration files, job definitions, source code, package definitions and accompanying information needed to make a software component deployable by BOSH. A release should have no dependencies that need to be fetched from the internet. |
+| <a id="release"></a>Release | A collection of configuration files, job definitions, source code, package definitions and accompanying information needed to make a software component deployable by BOSH. A self-contained release should have no dependencies that need to be fetched from the internet. |
 | <a id="resource_pools"></a>Resource Pools | Resource pools are collections of VMs created from the same stemcell, with the same configuration, in a deployment. |
 | <a id="stemcell"></a>Stemcell | A generic VM image that BOSH clones and configures to during deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products. |
 | <a id="task"></a>Task | The basic unit of work performed by BOSH. You can get the status and logs for any task. You can monitor the task throughout its lifecycle, which progresses through states like started, running, done, and error. |
