fix header in 'Step 6' bosh/setup-aws.html

--- a/setup-aws.html.md.erb
+++ b/setup-aws.html.md.erb
@@ -123,7 +123,7 @@ region.
 1. In a terminal window, run `source bosh_environment` to set the new
 environment variables for the current shell.
 
-#<a id="infrastructure"></a>Step 6: (Optional) Create AWS Infrastructure ##
+##<a id="infrastructure"></a>Step 6: (Optional) Create AWS Infrastructure ##
 
 <p class="note"><strong>Note</strong>: Skip this step if you are only deploying MicroBOSH, not BOSH.</p>
 
