--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -17,8 +17,8 @@ title: Index
 ---
 ## Installing MicroBOSH
 
- * [BOSH architecture](bosh-components.html)
- * Boostrapping an environment (i.e. Installing MicroBOSH)
+ * [BOSH components](bosh-components.html)
+ * [Boostrapping an environment / What is MicroBOSH?](bootstrap.html)
     * Local configuration
     * On Local machine (using bosh-lite)
        * Compatbility
